# qt-chatMsg-file

./: CMakeLists.txt  ChatMsgType.h  changepassword.cpp  changepassword.h  changepassword.ui  clientwidget.cpp  clientwidget.h  clientwidget.ui  fileclient.cpp  fileclient.h  fileserver.cpp  fileserver.h  fileserver.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  msgserver.cpp  msgserver.h  pictures.qrc  registermysql.cpp  registermysql.h  registermysql.ui  serverwidget.cpp  serverwidget.h  serverwidget.ui
Debug/myWeixin_mysql_next_autogen/: mocs_compilation.cpp
